--- a/SuperCollider/Help/SwingOSC/JSCScrollTopView.html
+++ b/SuperCollider/Help/SwingOSC/JSCScrollTopView.html
@@ -10,36 +10,26 @@
 p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
 p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; min-height: 12.0px}
-p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #55659b}
-p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #55659b; min-height: 14.0px}
+p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #576699}
+p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #576699; min-height: 14.0px}
 p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Helvetica}
 p.p7 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 14.0px Helvetica}
 p.p8 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p9 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica}
-p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco}
-p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; min-height: 14.0px}
-p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #843424}
-p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #574233}
-p.p14 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #2b6f11}
-p.p15 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
-p.p16 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #723b2a}
-p.p17 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #723b2a; min-height: 14.0px}
+p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #000000}
+p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #bf0000}
+p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #000000; min-height: 12.0px}
 span.s1 {font: 18.0px Helvetica}
 span.s2 {color: #000000}
-span.s3 {text-decoration: underline ; color: #4e5d8f}
-span.s4 {color: #556498}
-span.s5 {color: #55659b}
-span.s6 {font: 10.0px Monaco; color: #304993}
-span.s7 {color: #54669f}
-span.s8 {color: #5469a7}
-span.s9 {color: #526bb5}
-span.s10 {color: #0d32ac}
-span.s11 {color: #304993}
-span.s12 {color: #574233}
-span.s13 {color: #0019ba}
-span.s14 {color: #2b6f11}
-span.s15 {color: #606060}
-span.s16 {color: #193ba4}
+span.s3 {text-decoration: underline ; color: #505e8d}
+span.s4 {color: #576596}
+span.s5 {color: #576699}
+span.s6 {font: 10.0px Monaco; color: #344b90}
+span.s7 {color: #57679d}
+span.s8 {color: #576aa4}
+span.s9 {color: #566db2}
+span.s10 {color: #0000bf}
+span.s11 {color: #bf0000}
 span.Apple-tab-span {white-space:pre}
 </style>
 </head>
@@ -96,136 +86,21 @@ span.Apple-tab-span {white-space:pre}
 <p class="p2"><br></p>
 <p class="p7"><b>Examples</b></p>
 <p class="p3"><br></p>
-<p class="p10">g.reboot;</p>
-<p class="p10">g.dumpOSC(1); g.stopAliveThread;</p>
-<p class="p11"><br></p>
 <p class="p10">(</p>
-<p class="p12"><span class="s2">w = </span><span class="s10">JSCWindow</span><span class="s2">( scroll: </span><span class="s10">true</span><span class="s2"> ); </span>// you must set this when the window is created</p>
-<p class="p10">c = <span class="s10">JSCSlider</span>( w, <span class="s10">Rect</span>( 0, 0, 100, 30 ));</p>
+<p class="p11"><span class="s2">w = </span><span class="s10">JSCWindow</span><span class="s2">(scroll: </span><span class="s10">true</span><span class="s2">); </span>// you must set this when the window is created</p>
+<p class="p10">c = <span class="s10">JSCSlider</span>(w, <span class="s10">Rect</span>(0,0,100,30));</p>
 <p class="p10">w.front;</p>
 <p class="p10">)</p>
-<p class="p11"><br></p>
-<p class="p13"><span class="s2">c.resize = 2; </span>// resize settings are ignored if scrolling is enabled.</p>
-<p class="p11"><br></p>
-<p class="p13">g.sendMsg( '/method', w.view.id, \invalidate );</p>
-<p class="p10">d = <span class="s11">JSCSlider</span>( w, <span class="s11">Rect</span>( 1500, 40, 100, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p11"><br></p>
-<p class="p10">d.remove;</p>
-<p class="p11"><br></p>
-<p class="p10">x = <span class="s13">JavaObject</span>.basicNew( w.view.id, w.view.server );</p>
-<p class="p10">x.validate;</p>
-<p class="p10">x.revalidate;</p>
-<p class="p11"><br></p>
-<p class="p11"><br></p>
-<p class="p11"><br></p>
-<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\revalidate</span> );</p>
-<p class="p11"><br></p>
-<p class="p10">y = <span class="s13">JavaObject</span>.newFrom( x, <span class="s14">\getParent</span> );</p>
-<p class="p10">x.validate;</p>
-<p class="p10">y.validate;</p>
-<p class="p10">x.repaint;</p>
-<p class="p10">y.repaint;</p>
-<p class="p11"><br></p>
-<p class="p10">g.sendMsg( '/print', y.id );</p>
-<p class="p10">g.sendMsg( <span class="s14">'/print'</span>, w.view.id );</p>
-<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\validate</span> );</p>
-<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\revalidate</span> );</p>
-<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\repaint</span> );</p>
-<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\repaint</span> );</p>
-<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\validate</span> );</p>
-<p class="p14"><span class="s2">g.sendMsg( </span>'/local'<span class="s2">, </span>\test<span class="s2">, </span>'['<span class="s2">, </span>'/method'<span class="s2">, </span><span class="s15">"vp"</span><span class="s2"> ++ w.view.id, </span>\getPreferredSize<span class="s2">, </span>']'<span class="s2"> );</span></p>
-<p class="p10">g.sendMsg( <span class="s14">'/print'</span>, <span class="s14">\test</span> );</p>
-<p class="p10">e = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 1500, 80, 100, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p13">e.bounds</p>
-<p class="p10">d.bounds</p>
-<p class="p10">c.bounds = c.bounds.insetAll( 0, 0, -200, 0 );</p>
-<p class="p11"><br></p>
-<p class="p13"><span class="s2">e = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 0, 0, 100, 30 )); </span>// a horizontal scroller appears</p>
-<p class="p10">e.bounds</p>
-<p class="p10">e.opaque=true</p>
-<p class="p13"><span class="s2">f = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 4, 40, 100, 530 )); </span>// a horizontal scroller appears</p>
-<p class="p13">g.dumpOSC(1,1); g.stopAliveThread;</p>
-<p class="p13">g.dumpOSC(0,0);</p>
-<p class="p10">f.bounds</p>
-<p class="p10">f.refresh</p>
-<p class="p10">w.view.resize=5</p>
-<p class="p10">e.resize=5</p>
-<p class="p10">w.view.refresh</p>
-<p class="p11"><br></p>
-<p class="p15">w.view.action = { arg ... args; args.postln };</p>
-<p class="p15">w.view.visibleOrigin;</p>
-<p class="p15">c.bounds;</p>
-<p class="p15">w.view.innerBounds;</p>
-<p class="p15">w.view.bounds;</p>
-<p class="p11"><br></p>
-<p class="p16">// doesn't work</p>
-<p class="p16">// w.drawHook = { JPen.fillRect( Rect( 10, 10, 100, 100 ))};</p>
-<p class="p17"><br></p>
-<p class="p16">// w.view.background = Color.clear;</p>
-<p class="p11"><br></p>
-<p class="p10">i = <span class="s11">JSCUserView</span>( w, <span class="s11">Rect</span>( 120, 160, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p10">i.drawFunc = { <span class="s16">arg</span> v; <span class="s16">JPen</span>.fillRect( v.bounds )};</p>
-<p class="p10">i.mouseDownAction_({ arg ... args; args.postln });</p>
-<p class="p10">i.resize = 5;</p>
-<p class="p11"><br></p>
-<p class="p10">d = <span class="s11">JSCStaticText</span>( w, <span class="s11">Rect</span>( 4, 4, 100, 30 )).string_( "Schoko" );</p>
-<p class="p13"><span class="s2">e = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 4, 40, 100, 30 )); </span>// a horizontal scroller appears</p>
-<p class="p13">e.resize = 5;</p>
-<p class="p10">w.view.background_( Color.green );</p>
-<p class="p10">e.background_( Color.red );</p>
-<p class="p16">//w.view.opaque=false;</p>
-<p class="p16">//w.view.opaque=true;</p>
-<p class="p10">e.bounds;</p>
-<p class="p11"><br></p>
-<p class="p13"><span class="s2">f = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 40, 80, 100, 30 )); </span>// a horizontal scroller appears</p>
-<p class="p10">f.background_( Color.clear );</p>
-<p class="p11"><br></p>
-<p class="p13"><span class="s2">h = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 80, 120, 200, 30 )); </span>// a horizontal scroller appears</p>
-<p class="p10">h.background_( Color.clear );</p>
-<p class="p11"><br></p>
-<p class="p10">g.dumpOSC</p>
-<p class="p11"><br></p>
-<p class="p10">i = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 120, 160, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p10">i.background_( Color.clear );</p>
-<p class="p11"><br></p>
-<p class="p10">j = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 160, 200, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p10">j.background_( Color.clear );</p>
-<p class="p11"><br></p>
-<p class="p10">g.sendMsg( '/method', 1001, \repaint );</p>
-<p class="p10">g.sendMsg( '/method', 1007, \invalidate );</p>
-<p class="p10">g.sendMsg( '/method', 1007, \validate );</p>
-<p class="p10">g.sendMsg( '/method', 1001, \revalidate );</p>
-<p class="p11"><br></p>
-<p class="p10">n = JavaObject.basicNew( w.id, w.server );</p>
-<p class="p10">r = JavaObject.newFrom( n, \getRootPane );</p>
-<p class="p10">r.revalidate;</p>
-<p class="p10">c = JavaObject.newFrom( n, \getContentPane );</p>
-<p class="p10">d = JavaObject.newFrom( c, \getComponent, 0 );</p>
-<p class="p10">d = JavaObject.newFrom( c, \getComponent, 1 );</p>
-<p class="p10">g.sendMsg( '/print', d.id );</p>
-<p class="p11"><br></p>
-<p class="p10">e = JavaObject.newFrom( d, \getComponent, 0 );</p>
-<p class="p10">g.sendMsg( '/print', e.id );</p>
-<p class="p11"><br></p>
-<p class="p10">g.sendMsg( '/method', 1000, \revalidate );</p>
-<p class="p10">g.sendMsg( '/method', 1014, \invalidate );</p>
-<p class="p10">g.sendMsg( '/method', 1014, \revalidate );</p>
-<p class="p11"><br></p>
-<p class="p10">j.remove</p>
-<p class="p11"><br></p>
-<p class="p10">w.view.bounds;</p>
-<p class="p11"><br></p>
-<p class="p13"><span class="s2">w.view.autohidesScrollers<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= </span><span class="s11">false</span><span class="s2">; </span>// autohide is enabled by default, but we can turn it off</p>
-<p class="p10">w.view.hasHorizontalScroller<span class="Apple-tab-span">	</span>= <span class="s11">false</span>; <span class="s12">// hide the horizontal scroller</span></p>
-<p class="p10">w.view.autohidesScrollers<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= <span class="s11">true</span>;</p>
-<p class="p10">w.view.hasHorizontalScroller<span class="Apple-tab-span">	</span>= <span class="s11">true</span>;</p>
-<p class="p13"><span class="s2">w.view.visibleOrigin<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= 1200 @ 0; </span>// but we can still scroll using the visibleOrigin method</p>
-<p class="p13"><span class="s2">w.view.visibleOrigin<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= 0 @ 0; </span>// but we can still scroll using the visibleOrigin method</p>
-<p class="p11"><br></p>
-<p class="p13">////////////// PROBLEMS</p>
-<p class="p11"><br></p>
-<p class="p1">(FIXED?) view's returned bounds should (?) ignore the viewport's location</p>
-<p class="p11"><br></p>
-<p class="p10">w.view.background = <span class="s11">Color</span>.red;</p>
+<p class="p12"><br></p>
+<p class="p11"><span class="s2">c.resize = 2; </span>// resize settings are ignored if scrolling is enabled.</p>
+<p class="p12"><br></p>
+<p class="p11"><span class="s2">d = </span><span class="s10">JSCSlider</span><span class="s2">(w, </span><span class="s10">Rect</span><span class="s2">(1500, 40, 100, 30)); </span>// a horizontal scroller appears</p>
+<p class="p12"><br></p>
+<p class="p11"><span class="s2">w.view.autohidesScrollers_(</span><span class="s10">false</span><span class="s2">); </span>// autohide is enabled by default, but we can turn it off</p>
+<p class="p12"><br></p>
+<p class="p10">w.view.hasHorizontalScroller_(<span class="s10">false</span>); <span class="s11">// hide the horizontal scroller</span></p>
+<p class="p12"><br></p>
+<p class="p11"><span class="s2">w.view.visibleOrigin = 1500@0; </span>// but we can still scroll using the visibleOrigin method</p>
+<p class="p12"><br></p>
 </body>
 </html>
